added swagger docs,added new field popup in shop buy
