# server/handler/daily_goal.go
@@ -32,6 +32,19 @@ func GetDailyGoalsHandler(ctx *gin.Context) {
 
 }
 
+// SkipGoalHandler Skips the daily goals of the player
+//
+// @Summary Get the daily goals
+// @Description Gets the daily goals for given player
+// @Tags DailyGoal
+// @Accept json
+// @Produce json
+// @Param Authorization header string true "Player Access token"
+// @Param loginDetails body request.GoalRequest true "Goal id"
+// @Success 200 {object} response.Success "Sucess"
+// @Failure 400 {object} response.Success "Bad request"
+// @Failure 500 {object} response.Success "Internal server error"
+// @Router /skip-daily-goal [post]
 func SkipGoalHandler(ctx *gin.Context) {
 	userId, exists := ctx.Get("userId")
 	if !exists {
@@ -50,6 +63,19 @@ func SkipGoalHandler(ctx *gin.Context) {
 
 }
 
+// ClaimDailyGoalHandler Claims the rewards when all daily goals are completed
+//
+// @Summary Claims the rewards
+// @Description Claims the rewards when all daily goals are completed
+// @Tags DailyGoal
+// @Accept json
+// @Produce json
+// @Param Authorization header string true "Player Access token"
+// @Param loginDetails body request.GoalRequest true "Goal id"
+// @Success 200 {object} response.Success "Sucess"
+// @Failure 400 {object} response.Success "Bad request"
+// @Failure 500 {object} response.Success "Internal server error"
+// @Router /claim-daily-goal [post]
 func ClaimDailyGoalHandler(ctx *gin.Context) {
 	userId, exists := ctx.Get("userId")
 	if !exists {
@@ -67,6 +93,19 @@ func ClaimDailyGoalHandler(ctx *gin.Context) {
 	dailygoal.ClaimDailyGoalService(ctx, userId.(string), input)
 }
 
+// UpdateDailyGoalHandler Updates the goal data in between of the game
+//
+// @Summary Updates the goal
+// @Description  Updates the goal data in between of the game and gives the reward if the goal is completed
+// @Tags DailyGoal
+// @Accept json
+// @Produce json
+// @Param Authorization header string true "Player Access token"
+// @Param loginDetails body request.UpdateGoalReq true "Update request"
+// @Success 200 {object} response.Success "Sucess"
+// @Failure 400 {object} response.Success "Bad request"
+// @Failure 500 {object} response.Success "Internal server error"
+// @Router /update-daily-goal [put]
 func UpdateDailyGoalHandler(ctx *gin.Context) {
 	userId, exists := ctx.Get("userId")
 	if !exists {
